--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -657,94 +657,104 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 
   <h4 style="margin:0 0 10px 0;">Resposta 2.b — Stopping power e alcance no SRIM (c1, c2 e c3)</h4>
 
-  <!-- Variáveis de tamanho para as mini-tabelas -->
-  <div style="--w: 320px; --fs: 0.92rem; --pad: 6px; display:flex; gap:14px; flex-wrap:wrap; justify-content:center;">
+  <!-- Cards responsivos: ocupam toda a largura e se reorganizam conforme a janela -->
+  <div style="display:flex; gap:16px; flex-wrap:wrap; justify-content:center;">
 
     <!-- ====== C1 ====== -->
-    <div style="width:var(--w);">
+    <div style="flex:1 1 420px; max-width:900px;">
       <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/srim-c1-complete.png" target="_blank" rel="noopener">
         <img
           src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/srim-c1-complete.png"
           alt="SRIM — configuração/resultado c1"
-          style="width:100%; height:auto; border:1px solid #ddd; padding:2px; background:#fff;">
+          style="width:100%; height:auto; border:1px solid #ddd; padding:2px; background:#fff; display:block;">
       </a>
-      <table border="1" cellpadding="0" style="border-collapse:collapse; font-size:var(--fs); width:100%; margin-top:6px;">
+      <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; margin-top:8px; font-size:0.95rem;">
         <thead style="background:#f5f5f5;">
-          <tr><th colspan="2" style="text-align:left; padding:var(--pad);">c1 — Resumo SRIM</th></tr>
+          <tr><th colspan="2" style="text-align:left;">c1 — Resumo SRIM</th></tr>
         </thead>
         <tbody>
-          <tr><td style="padding:var(--pad);">Íon / Energia</td><td style="padding:var(--pad);">Xe, 90&nbsp;MeV</td></tr>
-          <tr><td style="padding:var(--pad);">Alvo (ρ)</td><td style="padding:var(--pad);">N–N–O (1,1593 g·cm⁻³)</td></tr>
-          <tr><td style="padding:var(--pad);">Projected Range R<sub>p</sub></td><td style="padding:var(--pad);">1,47&nbsp;µm</td></tr>
-          <tr><td style="padding:var(--pad);">Straggling ΔR<sub>p</sub></td><td style="padding:var(--pad);">0,20&nbsp;µm</td></tr>
-          <tr><td style="padding:var(--pad);">Espessura x</td><td style="padding:var(--pad);">0,909&nbsp;µm</td></tr>
-          <tr><td style="padding:var(--pad); font-weight:600;">Conclusão</td>
-              <td style="padding:var(--pad); font-weight:600;">Atravessou o filme</td></tr>
+          <tr><td>Íon / Energia</td><td>Xe, 90&nbsp;MeV</td></tr>
+          <tr><td>Alvo (ρ)</td><td>N–N–O, 1,1593&nbsp;g·cm⁻³</td></tr>
+          <tr><td>Projected Range \(R_p\)</td><td>1,47&nbsp;µm</td></tr>
+          <tr><td>Straggling \(\Delta R_p\)</td><td>0,20&nbsp;µm</td></tr>
+          <tr><td>Espessura \(x\) (2.a)</td><td>0,909&nbsp;µm</td></tr>
+          <tr>
+            <td style="font-weight:600;">Conclusão</td>
+            <td style="font-weight:600;">
+              \(R_p-\Delta R_p = 1{,}27\,\mu m &gt; x\) → <u>atravessou</u> (sem implantação).
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
 
     <!-- ====== C2 ====== -->
-    <div style="width:var(--w);">
+    <div style="flex:1 1 420px; max-width:900px;">
       <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/srim-c2-complete.png" target="_blank" rel="noopener">
         <img
           src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/srim-c2-complete.png"
           alt="SRIM — configuração/resultado c2"
-          style="width:100%; height:auto; border:1px solid #ddd; padding:2px; background:#fff;">
+          style="width:100%; height:auto; border:1px solid #ddd; padding:2px; background:#fff; display:block;">
       </a>
-      <table border="1" cellpadding="0" style="border-collapse:collapse; font-size:var(--fs); width:100%; margin-top:6px;">
+      <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; margin-top:8px; font-size:0.95rem;">
         <thead style="background:#f5f5f5;">
-          <tr><th colspan="2" style="text-align:left; padding:var(--pad);">c2 — Resumo SRIM</th></tr>
+          <tr><th colspan="2" style="text-align:left;">c2 — Resumo SRIM</th></tr>
         </thead>
         <tbody>
-          <tr><td style="padding:var(--pad);">Íon / Energia</td><td style="padding:var(--pad);">Xe, 90&nbsp;MeV</td></tr>
-          <tr><td style="padding:var(--pad);">Alvo (ρ)</td><td style="padding:var(--pad);">N–N–O (1,1593 g·cm⁻³)</td></tr>
-          <tr><td style="padding:var(--pad);">Projected Range R<sub>p</sub></td><td style="padding:var(--pad);">1,47&nbsp;µm</td></tr>
-          <tr><td style="padding:var(--pad);">Straggling ΔR<sub>p</sub></td><td style="padding:var(--pad);">0,20&nbsp;µm</td></tr>
-          <tr><td style="padding:var(--pad);">Espessura x</td><td style="padding:var(--pad);">3,461&nbsp;µm</td></tr>
-          <tr><td style="padding:var(--pad); font-weight:600;">Conclusão</td>
-              <td style="padding:var(--pad); font-weight:600;">Implantou no filme</td></tr>
+          <tr><td>Íon / Energia</td><td>Xe, 90&nbsp;MeV</td></tr>
+          <tr><td>Alvo (ρ)</td><td>N–N–O, 1,1593&nbsp;g·cm⁻³</td></tr>
+          <tr><td>Projected Range \(R_p\)</td><td>1,47&nbsp;µm</td></tr>
+          <tr><td>Straggling \(\Delta R_p\)</td><td>0,20&nbsp;µm</td></tr>
+          <tr><td>Espessura \(x\) (2.a)</td><td>3,461&nbsp;µm</td></tr>
+          <tr>
+            <td style="font-weight:600;">Conclusão</td>
+            <td style="font-weight:600;">
+              \(x &gt; R_p+\Delta R_p = 1{,}67\,\mu m\) → <u>implantou</u> (parou no filme).
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
 
     <!-- ====== C3 ====== -->
-    <div style="width:var(--w);">
+    <div style="flex:1 1 420px; max-width:900px;">
       <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/srim-c3-complete.png" target="_blank" rel="noopener">
         <img
-          src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/srim-c3-complete.png"
+          src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicados-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/srim-c3-complete.png"
           alt="SRIM — configuração/resultado c3"
-          style="width:100%; height:auto; border:1px solid #ddd; padding:2px; background:#fff;">
+          style="width:100%; height:auto; border:1px solid #ddd; padding:2px; background:#fff; display:block;">
       </a>
-      <table border="1" cellpadding="0" style="border-collapse:collapse; font-size:var(--fs); width:100%; margin-top:6px;">
+      <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; margin-top:8px; font-size:0.95rem;">
         <thead style="background:#f5f5f5;">
-          <tr><th colspan="2" style="text-align:left; padding:var(--pad);">c3 — Resumo SRIM</th></tr>
+          <tr><th colspan="2" style="text-align:left;">c3 — Resumo SRIM</th></tr>
         </thead>
         <tbody>
-          <tr><td style="padding:var(--pad);">Íon / Energia</td><td style="padding:var(--pad);">Xe, 90&nbsp;MeV</td></tr>
-          <tr><td style="padding:var(--pad);">Alvo (ρ)</td><td style="padding:var(--pad);">N–N–O (1,1593 g·cm⁻³)</td></tr>
-          <tr><td style="padding:var(--pad);">Projected Range R<sub>p</sub></td><td style="padding:var(--pad);">1,47&nbsp;µm</td></tr>
-          <tr><td style="padding:var(--pad);">Straggling ΔR<sub>p</sub></td><td style="padding:var(--pad);">0,20&nbsp;µm</td></tr>
-          <tr><td style="padding:var(--pad);">Espessura x</td><td style="padding:var(--pad);">0,178&nbsp;µm</td></tr>
-          <tr><td style="padding:var(--pad); font-weight:600;">Conclusão</td>
-              <td style="padding:var(--pad); font-weight:600;">Atravessou o filme</td></tr>
+          <tr><td>Íon / Energia</td><td>Xe, 90&nbsp;MeV</td></tr>
+          <tr><td>Alvo (ρ)</td><td>N–N–O, 1,1593&nbsp;g·cm⁻³</td></tr>
+          <tr><td>Projected Range \(R_p\)</td><td>1,47&nbsp;µm</td></tr>
+          <tr><td>Straggling \(\Delta R_p\)</td><td>0,20&nbsp;µm</td></tr>
+          <tr><td>Espessura \(x\) (2.a)</td><td>0,178&nbsp;µm</td></tr>
+          <tr>
+            <td style="font-weight:600;">Conclusão</td>
+            <td style="font-weight:600;">
+              \(R_p-\Delta R_p = 1{,}27\,\mu m \gg x\) → <u>atravessou</u> (sem implantação).
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
 
   </div>
 
-  <!-- Relato (curto) do que foi feito no SRIM -->
+  <!-- Nota sucinta de procedimento -->
   <p class="muted" style="margin-top:10px; text-align:justify;">
-    <strong>Relato:</strong> No TRIM, selecionei <em>Ion</em>=Xe (90&nbsp;MeV) e montei o alvo como N–N–O (estequiometria 1:1:1), com
-    densidade 1,1593&nbsp;g·cm<sup>−3</sup>. Para cada caso, defini a espessura do filme de N₂O igual ao valor obtido em 2.a
-    (<em>x</em><sub>c1</sub>=0,909&nbsp;µm; <em>x</em><sub>c2</sub>=3,461&nbsp;µm; <em>x</em><sub>c3</sub>=0,178&nbsp;µm) e
-    gerei a tabela no <em>Ion Stopping &amp; Range Tables</em>, de onde li o <em>Projected Range</em> (R<sub>p</sub>) e o
-    <em>Straggling</em> (ΔR<sub>p</sub>). Comparei R<sub>p</sub> com a espessura <em>x</em> e registrei no quadro acima se o feixe
-    implantou ou atravessou. Os três prints linkados mostram a configuração e o log usado em cada caso.
+    <strong>Como eu gerei os valores:</strong> no TRIM selecionei <em>Ion</em>=Xe (90&nbsp;MeV); no alvo, adicionei N (7), N (7) e O (8) com estequiometria 1:1:1 e
+    densidade 1,1593&nbsp;g·cm<sup>−3</sup>; para cada caso defini a espessura da camada como o \(x\) obtido em 2.a (c1, c2, c3) e executei
+    <em>Calculate Table</em> no <em>Ion Stopping &amp; Range Tables</em>. Do log, li \(R_p\) e \(\Delta R_p\) e comparei numericamente com \(x\) como mostrado em cada cartão.
   </p>
 
 </div>
+
 
 
     
