--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -667,6 +667,16 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
     &nbsp;&nbsp;&nbsp;– se \(R_p - \Delta R_p \le x \le R_p + \Delta R_p\) ⇒ <u>transição</u> (parcial).
   </div>
 
+<p class="muted" style="margin:8px 0 12px; text-align:justify; font-size:0.92rem;">
+  <strong>Referências para a interpretação de <em>range</em> e <em>straggling</em> no SRIM:</strong><br>
+  ZIEGLER, J. F.; BIERSACK, J. P.; LITTMARK, U. <em>The Stopping and Range of Ions in Solids</em>. New York: Pergamon Press, 1985.<br>
+  ZIEGLER, J. F. <em>SRIM – The Stopping and Range of Ions in Matter (SRIM-2013 Manual)</em>. SRIM Co., 2013.<br>
+  ICRU. <em>Stopping Powers and Ranges for Protons and Alpha Particles</em>. ICRU Report 49, Bethesda, MD, 1993.
+</p>
+  
+
+
+  
   <!-- Cards responsivos (imagens 100% da largura do cartão) -->
   <div style="display:flex; gap:16px; flex-wrap:wrap; justify-content:center;">
 
