--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -798,84 +798,89 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 
   <h4 style="margin:0 0 10px 0;">Resposta 3.1 — Identificação no OMNIC + atribuições e contaminantes</h4>
 
-  <!-- Grid compacto com viewers pequenos (lado a lado) -->
-  <div style="display:flex; gap:10px; flex-wrap:wrap; align-items:flex-start;">
+  <!-- Grade com viewers maiores (wrap em 2 fileiras no desktop) -->
+  <div style="
+    display:grid;
+    grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+    gap:14px;
+    align-items:start;
+  ">
 
     <!-- 589 cm⁻1 -->
-    <div style="flex:0 0 auto; width:240px; border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
-      <div style="padding:8px;">
-        <div style="font-weight:600; font-size:14px;">589 cm⁻¹ — ν₂ (N₂O)</div>
+    <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
+      <div style="padding:10px;">
+        <div style="font-weight:600; font-size:15px;">589 cm⁻¹ — ν₂ (N₂O)</div>
         <div style="font-size:12px; color:#555;">Janela 580–592; FWHH≈1.0</div>
       </div>
       <iframe
-        src="https://docs.google.com/gview?embedded=1&url=https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/3_589cm.pdf"
-        style="width:100%; height:180px; border:0;" title="3_589cm.pdf"></iframe>
+        src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/3_589cm.pdf#view=FitH"
+        style="width:100%; height:300px; border:0;" title="3_589cm.pdf"></iframe>
     </div>
 
     <!-- 1166 cm⁻1 -->
-    <div style="flex:0 0 auto; width:240px; border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
-      <div style="padding:8px;">
-        <div style="font-weight:600; font-size:14px;">1166 cm⁻¹ — 2ν₂ (N₂O)</div>
+    <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
+      <div style="padding:10px;">
+        <div style="font-weight:600; font-size:15px;">1166 cm⁻¹ — 2ν₂ (N₂O)</div>
         <div style="font-size:12px; color:#555;">Janela 1155–1178; FWHH≈1.0–1.3</div>
       </div>
       <iframe
-        src="https://docs.google.com/gview?embedded=1&url=https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/3_1166cm.pdf"
-        style="width:100%; height:180px; border:0;" title="3_1166cm.pdf"></iframe>
+        src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/3_1166cm.pdf#view=FitH"
+        style="width:100%; height:300px; border:0;" title="3_1166cm.pdf"></iframe>
     </div>
 
     <!-- 1295 cm⁻1 -->
-    <div style="flex:0 0 auto; width:240px; border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
-      <div style="padding:8px;">
-        <div style="font-weight:600; font-size:14px;">1295 cm⁻¹ — ν₁ (N–N, N₂O)</div>
+    <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
+      <div style="padding:10px;">
+        <div style="font-weight:600; font-size:15px;">1295 cm⁻¹ — ν₁ (N–N, N₂O)</div>
         <div style="font-size:12px; color:#555;">Janela 1280–1305; FWHH≈1.0</div>
       </div>
       <iframe
-        src="https://docs.google.com/gview?embedded=1&url=https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/3_1295cm.pdf"
-        style="width:100%; height:180px; border:0;" title="3_1295cm.pdf"></iframe>
+        src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/3_1295cm.pdf#view=FitH"
+        style="width:100%; height:300px; border:0;" title="3_1295cm.pdf"></iframe>
     </div>
 
     <!-- 2239 cm⁻1 -->
-    <div style="flex:0 0 auto; width:240px; border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
-      <div style="padding:8px;">
-        <div style="font-weight:600; font-size:14px;">2239 cm⁻¹ — ν₃ (anti-sim., N₂O)</div>
+    <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
+      <div style="padding:10px;">
+        <div style="font-weight:600; font-size:15px;">2239 cm⁻¹ — ν₃ (anti-sim., N₂O)</div>
         <div style="font-size:12px; color:#555;">Janela 2224–2243; FWHH≈1.0–1.4</div>
       </div>
       <iframe
-        src="https://docs.google.com/gview?embedded=1&url=https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/3_2239cm.pdf"
-        style="width:100%; height:180px; border:0;" title="3_2239cm.pdf"></iframe>
+        src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/3_2239cm.pdf#view=FitH"
+        style="width:100%; height:300px; border:0;" title="3_2239cm.pdf"></iframe>
     </div>
 
     <!-- 2581 cm⁻1 -->
-    <div style="flex:0 0 auto; width:240px; border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
-      <div style="padding:8px;">
-        <div style="font-weight:600; font-size:14px;">2581 cm⁻¹ — 2ν₁ / ν₁+ν₂ (N₂O)</div>
+    <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
+      <div style="padding:10px;">
+        <div style="font-weight:600; font-size:15px;">2581 cm⁻¹ — 2ν₁ / ν₁+ν₂ (N₂O)</div>
         <div style="font-size:12px; color:#555;">Janela 2565–2600; FWHH≈1.0–1.4</div>
       </div>
       <iframe
-        src="https://docs.google.com/gview?embedded=1&url=https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/3_2581cm.pdf"
-        style="width:100%; height:180px; border:0;" title="3_2581cm.pdf"></iframe>
+        src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/3_2581cm.pdf#view=FitH"
+        style="width:100%; height:300px; border:0;" title="3_2581cm.pdf"></iframe>
     </div>
 
     <!-- 3380 cm⁻1 -->
-    <div style="flex:0 0 auto; width:240px; border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
-      <div style="padding:8px;">
-        <div style="font-weight:600; font-size:14px;">3380 cm⁻¹ — O–H (H₂O, amorfa)</div>
+    <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
+      <div style="padding:10px;">
+        <div style="font-weight:600; font-size:15px;">3380 cm⁻¹ — O–H (H₂O, amorfa)</div>
         <div style="font-size:12px; color:#555;">Janela 3376–3382; baseline+área</div>
       </div>
       <iframe
-        src="https://docs.google.com/gview?embedded=1&url=https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/3_3380cm.pdf"
-        style="width:100%; height:180px; border:0;" title="3_3380cm.pdf"></iframe>
+        src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/3_3380cm.pdf#view=FitH"
+        style="width:100%; height:300px; border:0;" title="3_3380cm.pdf"></iframe>
     </div>
 
     <!-- 3706 cm⁻1 -->
-    <div style="flex:0 0 auto; width:240px; border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
-      <div style="padding:8px;">
-        <div style="font-weight:600; font-size:14px;">3706 cm⁻¹ — O–H “dangling bond”</div>
+    <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
+      <div style="padding:10px;">
+        <div style="font-weight:600; font-size:15px;">3706 cm⁻¹ — O–H “dangling bond”</div>
         <div style="font-size:12px; color:#555;">Janela 3706.5–3704.5; FWHH≈0.8–1.2</div>
       </div>
       <iframe
-        src="https://docs.google.com/gview?embedded=1&url=https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/3_3706cm.pdf"
-        style="width:100%; height:180px; border:0;" title="3_3706cm.pdf"></iframe>
+        src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/3_3706cm.pdf#view=FitH"
+        style="width:100%; height:300px; border:0;" title="3_3706cm.pdf"></iframe>
     </div>
 
   </div>
@@ -885,6 +890,7 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
   </p>
 
 </div>
+
 
 
   
