--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -779,10 +779,11 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 
 
 
-    
+
 
 <!-- ===================== SEÇÃO 3 (texto original, apenas formatado/justificado) ===================== -->
-<h3 style="text-align:justify;">3) Análise de bandas para a amostra não irradiada (bandas Pai) e o correspondente para irradiação nas diversas fluências</h3>
+
+<div class="atividade-section"><div class="dicas"><h3 style="text-align:justify;">3) Análise de bandas para a amostra não irradiada (bandas Pai) e o correspondente para irradiação nas diversas fluências</h3></div></div>
 
 <div class="enunciado" style="text-align:justify;">
   3.1- Identificar através do programa OMINIC os picos do N2O dados abaixo (amostra não irradiada) e conferir com os que são descritos em Fulvio 2009[5] - Tabela 3. Quais as substâncias correspondestes? Quais podemos classificar como contaminantes? &nbsp;  Obs.: Pesquisar na literatura as bandas que não estão na tabela.
@@ -888,11 +889,58 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 
   </div>
 
-  <p class="muted" style="margin-top:10px; text-align:justify; font-size:0.92rem;">
-    589/1166/1295/2239/2581 cm⁻¹: N₂O (ν₂, 2ν₂, ν₁, ν₃, overtone/comb.). 3380/3706 cm⁻¹: H₂O (contaminante).
+
+
+
+
+<!-- Resumo 3.1 com Tabela 3 (Fulvio 2009) -->
+<div class="muted" style="margin-top:10px; text-align:justify; font-size:0.92rem;">
+
+  <strong>Resumo 3.1 (com conferência em Fulvio&nbsp;2009 — Tabela&nbsp;3):</strong><br>
+  Do conjunto pedido (589, 1166, 1295, 2239, 2581, 3380, 3706&nbsp;cm⁻¹), os picos
+  <u>1166, 1295, 2239 e 2581&nbsp;cm⁻¹</u> constam na Tabela&nbsp;3 para N₂O sólido (16&nbsp;K).
+  Já <u>589&nbsp;cm⁻¹</u> não aparece na Tabela&nbsp;3, e <u>3380/3706&nbsp;cm⁻¹</u> não são de N₂O:
+  tratam-se de O–H de H₂O (contaminante), devendo ser referenciadas por literatura
+  específica de gelo d’água.
+
+  <!-- Tabela 3 (Fulvio 2009) reformatada -->
+  <figure style="margin:10px 0;">
+    <figcaption style="font-size:0.9rem; margin-bottom:6px;">
+      <em>Fulvio&nbsp;2009, Tabela&nbsp;3 — Posições de pico no infravermelho do N₂O sólido (16&nbsp;K) e atribuições de modo.</em>
+    </figcaption>
+    <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; font-size:0.92rem;">
+      <thead style="background:#f5f5f5;">
+        <tr>
+          <th style="text-align:left; width:40%;">Número de onda (cm⁻¹)</th>
+          <th style="text-align:left;">Modo</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td>1166</td><td>2ν₂</td></tr>
+        <tr><td>1295</td><td>ν₁</td></tr>
+        <tr><td>2239</td><td>ν₃</td></tr>
+        <tr><td>2469</td><td>ν₁ + 2ν₂</td></tr>
+        <tr><td>2581</td><td>2ν₁</td></tr>
+        <tr><td>2814</td><td>ν₂ + ν₃</td></tr>
+      </tbody>
+    </table>
+    <div style="font-size:0.85rem; color:#555; margin-top:6px;">
+      Fonte: Fulvio&nbsp;et&nbsp;al., <em>Spectrochimica Acta Part A</em> 72 (2009) 1007–1013 (Tabela&nbsp;3). :contentReference[oaicite:0]{index=0}
+    </div>
+  </figure>
+
+  <!-- Fechamento enxuto -->
+  <p style="margin-top:8px;">
+    Assim, nesta amostra não irradiada, os picos “pai” confirmados para N₂O são
+    1166 (2ν₂), 1295 (ν₁), 2239 (ν₃) e 2581 (2ν₁) cm⁻¹; 589&nbsp;cm⁻¹ e
+    3380/3706&nbsp;cm⁻¹ devem ser discutidos como fora da Tabela&nbsp;3 (contaminação por H₂O
+    no caso de 3380/3706) e referenciados à literatura específica solicitada no enunciado.
   </p>
 
 </div>
+
+
+
 
   
   
