--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -784,14 +784,14 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 
 <!-- ===================== SEÇÃO 3 (texto original, apenas formatado/justificado) ===================== -->
 
-<div class="atividade-section"><div class="dicas"><h3 style="text-align:justify;">3) Análise de bandas para a amostra não irradiada (bandas Pai) e o correspondente para irradiação nas diversas fluências</h3></div></div>
+<div class="atividade-section"><div class="dicas"><h3 style="text-align:justify;">3) Análise de bandas para a amostra não irradiada (bandas Pai) e o correspondente para irradiação nas diversas fluências</h3></div>
 
 <div class="enunciado" style="text-align:justify;">
   3.1- Identificar através do programa OMINIC os picos do N2O dados abaixo (amostra não irradiada) e conferir com os que são descritos em Fulvio 2009[5] - Tabela 3. Quais as substâncias correspondestes? Quais podemos classificar como contaminantes? &nbsp;  Obs.: Pesquisar na literatura as bandas que não estão na tabela.
   <br>
   Bandas para os picos em: &nbsp; 589, 1166, 1295, 2239, 2581, 3380, 3706
 </div>
-
+</div>
 
 
 
